# pathtracing_2d

./: .gitignore  CMakeLists.txt  FFT.md  README.md  glass.json  run_cmake.sh  scene.json  test.json
docs/: README.md  index.md
docs/authoring/: page-template.md
docs/basics/: lane-and-mask.md
docs/operations/: arithmetic.md  compare.md  convert-and-cast.md  initialize.md  logical.md  math-functions.md  memory.md  reduce.md  select.md  shift.md
docs/raytracing/: active-lanes.md  material-select.md  nearest-hit.md  rejection-sampling.md
docs/reference/: intrinsics.md  official-resources.md
src/: main.cpp  ris_learning_hierarchical.py
src/FFT_SIM/: CMakeLists.txt  main.cpp
src/montecarlo_integration_simd/: CMakeLists.txt  main.cpp
src/pt2d/: App.cpp  App.h  DebugTrace.h  Integrator.cpp  Integrator.h  PngWriter.cpp  PngWriter.h  ProductionApp.cpp  ProductionApp.h  RISDirection.cpp  RISDirection.h  Sampler.h  Scene.cpp  Scene.h  SceneSerializer.cpp
src/ray_tracing_in_one_weekend_simd/: CMakeLists.txt  README_SIMD_EXERCISES_JA.md  camera.h  image.h  main.cpp  material.h  math.h  path_tracer.h  random.h  random_sampling.h  render_config.h  scatter.h  scene.h  scene_factory.h
src/raytracing/: CMakeLists.txt  main.cpp  production_main.cpp  ris_direction.py
src/raytracing/pt2d/: App.cpp  App.h  Color.h  Integrator.cpp  Integrator.h  Math.h  ProductionApp.cpp  ProductionApp.h  RISDirection.cpp  RISDirection.h  Scene.h  SceneSerializer.cpp  SceneSerializer.h  Spectral.h
src/util/: CMakeLists.txt  FFT.cpp  FFT.h  math.h
